--- a/jobs.html
+++ b/jobs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
     <title>Jobs & All-UniLife</title>
     <link rel="stylesheet" href="stylejobs.css">
 </head>
@@ -14,20 +14,56 @@
             <button class="nav-button active">
                 <a href="index.html" class="text-decoration-home">Home</a>
             </button>
-           
-                <a href="about.html" class="text-decoration-about"> <button class="nav-button">About</button></a>
-                <a href="cumparaturi.html" class="text-decoration-about"> <button class="nav-button">Cumpărături</button></a>
-                <a href="calendar.html" class="text-decoration-about"> <button class="nav-button">Calendar</button></a>
-                <a href="jobs.html" class="text-decoration-about"> <button class="nav-button">Jobs & All</button></a>
+            <a href="about.html" class="text-decoration-about"> <button class="nav-button">About</button></a>
+            <a href="cumparaturi.html" class="text-decoration-about"> <button class="nav-button">Cumpărături</button></a>
+            <a href="calendar.html" class="text-decoration-about"> <button class="nav-button">Calendar</button></a>
+            <a href="jobs.html" class="text-decoration-about"> <button class="nav-button">Jobs & All</button></a>
         </div>
         <div class="nav-actions">
-            <button class="action-button">
-                <a href="login.html" class="text-decoration-login">Log-In</a>
-            </button>
-            <button class="action-button">
-                    <a href="singin.html" class="text-decoration-signin">Sign-In</a>
-            </button>
+            <button id="auth-button" class="action-button"></button>
         </div>
     </div>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const username = sessionStorage.getItem('username');
+            const authButton = document.getElementById('auth-button');
+
+            if (username) {
+                authButton.innerHTML = `<span class="user-name">${username}</span>`;
+                authButton.onclick = () => {
+                    window.location.href = 'profile.html';
+                };
+            } else {
+                authButton.innerHTML = `
+                    <a href="login.html" class="text-decoration-login">Log-In</a>
+                `;
+                const signinButton = document.createElement('button');
+                signinButton.className = 'action-button';
+                signinButton.innerHTML = '<a href="signin.html" class="text-decoration-signin">Sign-In</a>';
+                document.querySelector('.nav-actions').appendChild(signinButton);
+            }
+        });
+    </script>
+
+    <style>
+        .user-name {
+            font-weight: bold;
+            color: white;
+        }
+        .action-button {
+            margin: 0 10px;
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        .action-button:hover {
+            background-color: #2980b9;
+        }
+    </style>
 </body>
 </html>
