--- a/profile.html
+++ b/profile.html
@@ -35,14 +35,12 @@
                         <li class="nav-item">
                             <a class="nav-link active" href="#">Dashboard</a>
                         </li>
+                        <!-- Butonul "Account Details" a fost eliminat -->
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Account Details</a>
+                            <a class="nav-link" href="#" id="change-password-button">Change Password</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Change Password</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
+                            <a class="nav-link" href="#" id="logout-button">Logout</a>
                         </li>
                     </ul>
                 </div>
@@ -60,6 +58,13 @@
                             <button type="button" class="btn-custom" onclick="document.getElementById('file-input').click();">Upload Image</button>
                             <button type="submit" class="btn-custom" id="upload-button" style="display: none;">Upload Image</button>
                         </form>
+
+                        <!-- Change Password Form -->
+<form id="change-password-form">
+    <input type="hidden" name="email" id="profile-email-hidden">
+    <button type="submit" class="btn-custom">Send Reset Password Email</button>
+</form>
+
                     </div>
                     <div class="profile-details">
                         <p><strong>Username:</strong> <span id="profile-username"></span></p>
@@ -72,35 +77,68 @@
     </div>
 
     <!-- Script -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const username = sessionStorage.getItem('username');
-            const email = sessionStorage.getItem('email');
-            const city = sessionStorage.getItem('city');
-            const profileImage = sessionStorage.getItem('profileImage');
+<script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const username = sessionStorage.getItem('username');
+        const email = sessionStorage.getItem('email');
+        const city = sessionStorage.getItem('city');
+        const profileImage = sessionStorage.getItem('profileImage');
 
-            if (username) {
-                document.getElementById('profile-username').textContent = username;
-                document.getElementById('profile-email').textContent = email;
-                document.getElementById('profile-city').textContent = city;
-                document.getElementById('username').textContent = username;
-                document.getElementById('hidden-username').value = username;
-            }
+        if (username) {
+            document.getElementById('profile-username').textContent = username;
+            document.getElementById('profile-email').textContent = email;
+            document.getElementById('profile-city').textContent = city;
+            document.getElementById('username').textContent = username;
+            document.getElementById('profile-email-hidden').value = email;
+        }
 
-            if (profileImage) {
-                document.getElementById('profile-image').src = profileImage;
-            }
+        if (profileImage) {
+            document.getElementById('profile-image').src = profileImage;
+        }
 
-            const fileInput = document.getElementById('file-input');
-            const uploadButton = document.getElementById('upload-button');
+        const fileInput = document.getElementById('file-input');
+        const uploadButton = document.getElementById('upload-button');
 
-            fileInput.addEventListener('change', () => {
-                uploadButton.style.display = 'block';
-                document.getElementById('upload-form').submit();
-            });
+        fileInput.addEventListener('change', () => {
+            uploadButton.style.display = 'block';
+            document.getElementById('upload-form').submit();
         });
-    </script>
+
+        const logoutButton = document.getElementById('logout-button');
+        logoutButton.addEventListener('click', () => {
+            sessionStorage.clear();
+            window.location.href = 'login.html';
+        });
+
+        const changePasswordButton = document.getElementById('change-password-button');
+        changePasswordButton.addEventListener('click', () => {
+            document.getElementById('change-password-form').style.display = 'block';
+        });
+
+        // Funcția pentru trimiterea emailului de resetare a parolei
+        const changePasswordForm = document.getElementById('change-password-form');
+        changePasswordForm.addEventListener('submit', async (e) => {
+            e.preventDefault();
+
+            const emailHidden = document.getElementById('profile-email-hidden').value;
+
+            const response = await fetch('/send-reset-password-email', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ email: emailHidden })
+            });
+
+            if (response.ok) {
+                alert('Reset password email sent successfully!');
+            } else {
+                alert('Error sending reset password email');
+            }
+        });
+    });
+</script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
-
