--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_uni.png">
     <title>Profile - UniLife</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="styleprofile.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
@@ -53,8 +55,7 @@
                         <form id="upload-form" action="/upload-profile-image" method="post" enctype="multipart/form-data">
                             <input type="hidden" name="username" id="hidden-username">
                             <input type="file" name="profileImage" id="file-input" accept="image/*" style="display: none;">
-                            <button type="button" class="btn-custom" onclick="document.getElementById('file-input').click();">Upload Image</button>
-                            <button type="submit" class="btn-custom" id="upload-button" style="display: none;">Upload Image</button>
+                            <button type="button" class="btn-custom" id="upload-button">Upload Image</button>
                         </form>
 
                         <!-- Change Password Form -->
@@ -96,9 +97,20 @@
 
             const fileInput = document.getElementById('file-input');
             const uploadButton = document.getElementById('upload-button');
+            let uploadClicked = false; // Flag pentru a verifica dacă butonul a fost deja apăsat
+
+            uploadButton.addEventListener('click', () => {
+                if (!uploadClicked) {
+                    uploadClicked = true; // Marcare buton ca apăsat
+                    fileInput.click(); // Simulează click pe input-ul de fișiere
+                }
+            });
 
             fileInput.addEventListener('change', () => {
-                uploadButton.style.display = 'block';
+                if (fileInput.files.length > 0) {
+                    // Codul pentru upload imagine
+                    document.getElementById('upload-form').submit();
+                }
             });
 
             // Funcția pentru Logout
@@ -113,8 +125,26 @@
             changePasswordButton.addEventListener('click', () => {
                 document.getElementById('change-password-form').style.display = 'block';
             });
+
+            // Script to handle login and profile button in navbar
+            const authButton = document.getElementById('auth-button');
+
+            if (username) {
+                authButton.innerHTML = `<span class="user-name">${username}</span>`;
+                authButton.onclick = () => {
+                    window.location.href = 'profile.html';
+                };
+            } else {
+                authButton.innerHTML = `
+                    <a href="login.html" class="text-decoration-login">Log-In</a>
+                `;
+                const signinButton = document.createElement('button');
+                signinButton.className = 'action-button';
+                signinButton.innerHTML = '<a href="signin.html" class="text-decoration-signin">Sign-In</a>';
+                document.querySelector('.nav-actions').appendChild(signinButton);
+            }
         });
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrKzL1l6S6D2vRHP2sdOn8dfDPEkxm/rfz7xzP8lQ0RQo/TW0hFhgAs54hRts" crossorigin="anonymous"></script>
 </body>
 </html>
