--- a/profile.html
+++ b/profile.html
@@ -58,12 +58,13 @@
                             <button type="button" class="btn-custom" id="upload-button">Upload Image</button>
                         </form>
 
-                        <!-- Change Password Form -->
-                        <form id="change-password-form" action="/send-reset-password-email" method="post">
-                            <input type="hidden" name="email" id="profile-email-hidden">
-                            <button type="submit" class="btn-custom">Send Reset Password Email</button>
-                        </form>
-                    </div>
+<!-- Change Password Form -->
+<form id="change-password-form">
+    <input type="hidden" name="email" id="profile-email-hidden">
+    <button type="submit" class="btn-custom">Send Reset Password Email</button>
+</form>
+<div id="success-message" style="display: none; color: green;">Reset password email sent successfully!</div>
+
                     <div class="profile-details">
                         <p><strong>Username:</strong> <span id="profile-username"></span></p>
                         <p><strong>Email:</strong> <span id="profile-email"></span></p>
@@ -75,76 +76,101 @@
     </div>
 
     <!-- Script -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const username = sessionStorage.getItem('username');
-            const email = sessionStorage.getItem('email');
-            const city = sessionStorage.getItem('city');
-            const profileImage = sessionStorage.getItem('profileImage');
+   <script>
+document.addEventListener('DOMContentLoaded', () => {
+    const username = sessionStorage.getItem('username');
+    const email = sessionStorage.getItem('email');
+    const city = sessionStorage.getItem('city');
+    const profileImage = sessionStorage.getItem('profileImage');
 
-            if (username) {
-                document.getElementById('profile-username').textContent = username;
-                document.getElementById('profile-email').textContent = email;
-                document.getElementById('profile-city').textContent = city;
-                document.getElementById('username').textContent = username;
-                document.getElementById('hidden-username').value = username; // Stochează username-ul pentru încărcare imagine
-                document.getElementById('profile-email-hidden').value = email;
-            }
+    if (username) {
+        document.getElementById('profile-username').textContent = username;
+        document.getElementById('profile-email').textContent = email;
+        document.getElementById('profile-city').textContent = city;
+        document.getElementById('username').textContent = username;
+        document.getElementById('hidden-username').value = username; // Stochează username-ul pentru încărcare imagine
+        document.getElementById('profile-email-hidden').value = email;
+    }
 
-            if (profileImage) {
-                document.getElementById('profile-image').src = profileImage;
-            }
+    if (profileImage) {
+        document.getElementById('profile-image').src = profileImage;
+    }
 
-            const fileInput = document.getElementById('file-input');
-            const uploadButton = document.getElementById('upload-button');
-            let uploadClicked = false; // Flag pentru a verifica dacă butonul a fost deja apăsat
+    const fileInput = document.getElementById('file-input');
+    const uploadButton = document.getElementById('upload-button');
+    let uploadClicked = false; // Flag pentru a verifica dacă butonul a fost deja apăsat
 
-            uploadButton.addEventListener('click', () => {
-                if (!uploadClicked) {
-                    uploadClicked = true; // Marcare buton ca apăsat
-                    fileInput.click(); // Simulează click pe input-ul de fișiere
-                }
-            });
+    uploadButton.addEventListener('click', () => {
+        if (!uploadClicked) {
+            uploadClicked = true; // Marcare buton ca apăsat
+            fileInput.click(); // Simulează click pe input-ul de fișiere
+        }
+    });
 
-            fileInput.addEventListener('change', () => {
-                if (fileInput.files.length > 0) {
-                    // Codul pentru upload imagine
-                    document.getElementById('upload-form').submit();
-                }
-            });
+    fileInput.addEventListener('change', () => {
+        if (fileInput.files.length > 0) {
+            // Codul pentru upload imagine
+            document.getElementById('upload-form').submit();
+        }
+    });
 
-            // Funcția pentru Logout
-            const logoutButton = document.getElementById('logout-button');
-            logoutButton.addEventListener('click', () => {
-                sessionStorage.clear();
-                window.location.href = 'login.html'; // Redirecționează către pagina de login
-            });
+    // Funcția pentru Logout
+    const logoutButton = document.getElementById('logout-button');
+    logoutButton.addEventListener('click', () => {
+        sessionStorage.clear();
+        window.location.href = 'login.html'; // Redirecționează către pagina de login
+    });
 
-            // Funcția pentru Change Password
-            const changePasswordButton = document.getElementById('change-password-button');
-            changePasswordButton.addEventListener('click', () => {
-                document.getElementById('change-password-form').style.display = 'block';
-            });
+    // Funcția pentru Change Password
+    const changePasswordButton = document.getElementById('change-password-button');
+    changePasswordButton.addEventListener('click', () => {
+        document.getElementById('change-password-form').style.display = 'block';
+    });
 
-            // Script to handle login and profile button in navbar
-            const authButton = document.getElementById('auth-button');
+    // Script to handle login and profile button in navbar
+    const authButton = document.getElementById('auth-button');
 
-            if (username) {
-                authButton.innerHTML = `<span class="user-name">${username}</span>`;
-                authButton.onclick = () => {
-                    window.location.href = 'profile.html';
-                };
-            } else {
-                authButton.innerHTML = `
-                    <a href="login.html" class="text-decoration-login">Log-In</a>
-                `;
-                const signinButton = document.createElement('button');
-                signinButton.className = 'action-button';
-                signinButton.innerHTML = '<a href="signin.html" class="text-decoration-signin">Sign-In</a>';
-                document.querySelector('.nav-actions').appendChild(signinButton);
-            }
+    if (username) {
+        authButton.innerHTML = `<span class="user-name">${username}</span>`;
+        authButton.onclick = () => {
+            window.location.href = 'profile.html';
+        };
+    } else {
+        authButton.innerHTML = `
+            <a href="login.html" class="text-decoration-login">Log-In</a>
+        `;
+        const signinButton = document.createElement('button');
+        signinButton.className = 'action-button';
+        signinButton.innerHTML = '<a href="signin.html" class="text-decoration-signin">Sign-In</a>';
+        document.querySelector('.nav-actions').appendChild(signinButton);
+    }
+
+    // Script to handle reset password email
+    const changePasswordForm = document.getElementById('change-password-form');
+    const successMessage = document.getElementById('success-message');
+
+    changePasswordForm.addEventListener('submit', async function(event) {
+        event.preventDefault(); // Previne trimiterea formularului
+        
+        // Trimite cererea folosind Fetch API
+        const response = await fetch(changePasswordForm.action, {
+            method: 'POST',
+            body: new URLSearchParams(new FormData(changePasswordForm)),
         });
-    </script>
+
+        if (response.ok) {
+            successMessage.style.display = 'block';
+        } else {
+            successMessage.textContent = 'Error sending reset password email.';
+            successMessage.style.color = 'red';
+            successMessage.style.display = 'block';
+        }
+    });
+});
+</script>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrKzL1l6S6D2vRHP2sdOn8dfDPEkxm/rfz7xzP8lQ0RQo/TW0hFhgAs54hRts" crossorigin="anonymous"></script>
 </body>
 </html>
+
